fix layout issues

--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -151,15 +151,8 @@
       background: transparent;
     }
   }
-
-  .height-screen {
-    /* Fallback for browsers that don't support dvh */
-    height: 100vh;
-    /* For browsers that support dvh */
-    height: 100dvh;
-  }
 }
 
-html.no-scroll {
-  overflow-y: hidden;
+* {
+  min-height: 0;
 }
